VI-196 - remove kvalifikationer from user

--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
+    - field.field.user.user.field_banner
     - field.field.user.user.field_e_mail
+    - field.field.user.user.field_job_title
+    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
-    - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
@@ -73,8 +76,11 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_banner: true
   field_e_mail: true
+  field_job_title: true
+  field_paragraphs: true
   field_user_birthday: true
-  field_user_kvalifikationer: true
+  field_user_type_id: true
   langcode: true
   member_for: true
