--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -37,7 +37,7 @@ third_party_settings:
         - field_vih_user_descr
         - field_vih_user_phone
         - field_e_mail
-        - field_user_kvalifikationer
+        - field_user_type_id
       parent_name: ''
       weight: 1
       format_type: tab
@@ -84,6 +84,7 @@ third_party_settings:
         - contact
         - langcode
         - language
+        - translation
       parent_name: ''
       weight: 3
       format_type: tab
@@ -125,14 +126,14 @@ content:
     third_party_settings: {  }
   field_e_mail:
     type: email_default
-    weight: 8
+    weight: 19
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_job_title:
-    weight: 2
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -155,13 +156,13 @@ content:
     region: content
   field_user_birthday:
     type: datetime_default
-    weight: 5
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_user_name_first:
     type: string_textfield
-    weight: 3
+    weight: 14
     region: content
     settings:
       size: 60
@@ -169,14 +170,14 @@ content:
     third_party_settings: {  }
   field_user_name_last:
     type: string_textfield
-    weight: 4
+    weight: 15
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_user_type_id:
-    weight: 11
+    weight: 20
     settings:
       match_operator: CONTAINS
       size: 60
@@ -186,7 +187,7 @@ content:
     region: content
   field_vih_user_descr:
     type: text_textarea
-    weight: 6
+    weight: 17
     region: content
     settings:
       rows: 5
@@ -194,7 +195,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
-    weight: 7
+    weight: 18
     region: content
     settings:
       size: 60
@@ -202,7 +203,7 @@ content:
     third_party_settings: {  }
   field_vih_user_photo:
     type: image_image
-    weight: 1
+    weight: 12
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
@@ -229,7 +230,9 @@ content:
     settings: {  }
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 8
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   timezone: true
