--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -30,7 +30,7 @@ content:
     label: hidden
     settings:
       photoswipe_node_style: medium
-      photoswipe_image_style: ''
+      photoswipe_image_style: banner
       photoswipe_caption: title
       photoswipe_view_mode: default
     third_party_settings: {  }
