--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -11,10 +11,13 @@ dependencies:
     - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
     - field_group
+    - image_widget_crop
+    - lightning_media
     - link
     - text
     - workbench_moderation
@@ -84,18 +87,22 @@ content:
     type: link_default
     region: content
   field_paragraph_person_photo:
-    type: entity_browser_file
+    type: image_widget_crop
     weight: 3
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
+      show_default_crop: true
       preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
+      crop_preview_image_style: crop_square
+      progress_indicator: throbber
+      crop_list:
+        - square
+      show_crop_area: false
+      warn_multiple_usages: false
     region: content
-    third_party_settings: {  }
+    third_party_settings:
+      lightning_media:
+        file_links: true
+        remove_button: true
   field_paragraph_text:
     type: text_textarea
     weight: 2
