VI-199, VI-200 and VI-201 - time

--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -60,7 +60,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: default_medium_date_without_time
+      format_type: medium_datetime
     third_party_settings: {  }
     type: datetime_default
     region: content
@@ -80,7 +80,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: vih_medium_date_short_month
+      format_type: medium_datetime
     third_party_settings: {  }
     type: datetime_default
     region: content
