--- a/config/sync/views.view.my_classes_nodes.yml
+++ b/config/sync/views.view.my_classes_nodes.yml
@@ -3,10 +3,12 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - node
     - paragraphs
+    - text
     - user
 id: my_classes_nodes
 label: 'Mine fag - noder'
@@ -118,7 +120,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -132,6 +134,68 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
+        field_description:
+          id: field_description
+          table: paragraph__field_description
+          field: field_description
+          relationship: field_paragraphs
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -143,7 +207,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"boxy boxy--highlighted\">\n  <div class=\"boxy__body\">\n    {{ title }} \n  </div>\n</div>"
+            text: "<div class=\"boxy boxy--highlighted\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    {{ field_description }}\n  </div>\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -319,7 +383,8 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.paragraph.field_description'
   embedded_embedded:
     display_plugin: embed
     id: embedded_embedded
@@ -336,4 +401,5 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.paragraph.field_description'
