--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -385,8 +385,8 @@ display:
           type: boolean
           settings:
             format: yes-no
-            format_custom_true: ''
-            format_custom_false: ''
+            format_custom_true: Udgivet
+            format_custom_false: 'Ikke udgivet'
           group_column: value
           group_columns: {  }
           group_rows: true
