--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -3,18 +3,18 @@ settings:
   default_form_open_message: 'This form has not yet been opened to submissions.'
   default_form_close_message: 'Sorry...This form is closed to new submissions.'
   default_form_exception_message: 'Unable to display this webform. Please contact the site administrator.'
-  default_submit_button_label: Submit
-  default_reset_button_label: Reset
-  default_form_submit_once: false
   default_form_confidential_message: 'This form is confidential. You must <a href="[site:login-url]/logout?destination=[current-page:url:relative]">Log out</a> to submit it.'
   default_form_login_message: 'Please login to access this webform.'
+  default_submit_button_label: Submit
+  default_reset_button_label: Reset
+  form_classes: "container-inline clearfix\r\nform--inline clearfix\r\nmessages messages--error\r\nmessages messages--warning\r\nmessages messages--status\r\n"
+  button_classes: ''
+  default_form_submit_once: false
   default_form_disable_back: false
   default_form_submit_back: false
   default_form_unsaved: false
   default_form_novalidate: false
   default_form_details_toggle: true
-  form_classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
-  button_classes: ''
   default_wizard_prev_button_label: '< Forrige side'
   default_wizard_next_button_label: 'Næste side >'
   default_wizard_start_label: Start
@@ -23,19 +23,19 @@ settings:
   default_preview_prev_button_label: '< Previous'
   default_preview_label: Preview
   default_preview_title: '[webform:title]: Preview'
-  default_preview_message: 'Please review your submission. Your submission is not complete until you press the "Submit" button!'
+  default_preview_message: 'Please review your submission. Your submission is not complete until you press the &quot;Submit&quot; button!'
+  preview_classes: "messages messages--error\r\nmessages messages--warning\r\nmessages messages--status\r\n"
   default_draft_button_label: 'Gem kladde'
-  default_draft_saved_message: 'Formular gemt. Du kan vende tilbage senere og gendanne standardværdierne.'
+  default_draft_saved_message: 'Formular gemt. Du kan vende tilbage senere og gendanne standardv&aelig;rdierne.'
   default_draft_loaded_message: 'A partially-completed form was found. Please complete the remaining portions.'
   default_confirmation_message: 'New submission added to [webform:title].'
   default_confirmation_back_label: 'Back to form'
+  confirmation_classes: "messages messages--error\r\nmessages messages--warning\r\nmessages messages--status\r\n"
+  confirmation_back_classes: "button\r\n"
   default_submission_label: '[webform_submission:submitted-to]: Submission #[webform_submission:serial]'
   default_submission_login_message: 'Please login to access this submission.'
   default_submission_exception_message: 'Unable to process this submission. Please contact the site administrator.'
   default_submission_log: false
-  preview_classes: "messages messages--error\nmessages messages--warning\nmessages messages--status\n"
-  confirmation_classes: "messages messages--error\nmessages messages--warning\nmessages messages--status\n"
-  confirmation_back_classes: "button\n"
   default_limit_total_message: 'No more submissions are permitted.'
   default_limit_user_message: 'No more submissions are permitted.'
 assets:
