--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
@@ -42,6 +42,7 @@ hidden:
   field_banner: true
   field_heading: true
   field_link_taxo: true
+  field_metatag: true
   field_paragraphs: true
   field_subheading: true
   field_vih_class_package_color: true
