--- a/config/sync/block.block.demounderretning.yml
+++ b/config/sync/block.block.demounderretning.yml
@@ -1,9 +1,9 @@
-uuid: 78fa3621-107a-4fc1-bec1-9d5b9bd35e4c
-langcode: da
+uuid: f87a308a-9bc4-4ec0-9349-ff23af9b9746
+langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:notify:2ce2c5ab-63ad-4808-ac53-3fb114a9c8e9'
+    - 'block_content:notify:64d2939b-865e-4f01-bfc7-31b6392fd55f'
   module:
     - block_content
   theme:
@@ -13,9 +13,9 @@ theme: site
 region: notify
 weight: 0
 provider: null
-plugin: 'block_content:2ce2c5ab-63ad-4808-ac53-3fb114a9c8e9'
+plugin: 'block_content:64d2939b-865e-4f01-bfc7-31b6392fd55f'
 settings:
-  id: 'block_content:2ce2c5ab-63ad-4808-ac53-3fb114a9c8e9'
+  id: 'block_content:64d2939b-865e-4f01-bfc7-31b6392fd55f'
   label: 'Demo underretning'
   provider: block_content
   label_display: visible
