--- a/config/sync/core.entity_form_display.media.document.media_browser.yml
+++ b/config/sync/core.entity_form_display.media.document.media_browser.yml
@@ -24,11 +24,12 @@ content:
     weight: 1
     third_party_settings: {  }
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
+  langcode:
+    type: language_select
+    weight: 2
     region: content
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
