--- a/config/sync/core.entity_form_display.media.image.media_browser.yml
+++ b/config/sync/core.entity_form_display.media.image.media_browser.yml
@@ -44,11 +44,12 @@ content:
         file_links: false
         remove_button: false
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
+  langcode:
+    type: language_select
+    weight: 2
     region: content
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
