--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -73,6 +73,7 @@ content:
 hidden:
   field_banner: true
   field_event_price: true
+  field_metatag: true
   field_paragraphs: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
