--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -43,6 +43,7 @@ hidden:
   field_event_price: true
   field_event_start_date: true
   field_image: true
+  field_metatag: true
   field_paragraphs: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
