--- a/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
@@ -52,6 +52,8 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  field_banner: true
+  field_metatag: true
   field_paragraphs: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
@@ -64,3 +66,4 @@ hidden:
   field_vih_course_week_price: true
   langcode: true
   links: true
+  scheduled_update: true
