--- a/config/sync/core.entity_view_display.node.vih_short_course.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.list_advanced.yml
@@ -75,6 +75,8 @@ content:
     weight: -20
     region: content
 hidden:
+  field_banner: true
+  field_metatag: true
   field_paragraphs: true
   field_vih_course_heading: true
   field_vih_course_subheading: true
