--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
@@ -43,6 +43,7 @@ content:
 hidden:
   field_banner: true
   field_heading: true
+  field_metatag: true
   field_paragraphs: true
   field_subheading: true
   field_vih_class_class_packages: true
