--- a/config/sync/paragraphs.paragraphs_type.list_of_news_teasers.yml
+++ b/config/sync/paragraphs.paragraphs_type.list_of_news_teasers.yml
@@ -4,4 +4,6 @@ status: true
 dependencies: {  }
 id: list_of_news_teasers
 label: 'Liste af nyhedsteasere'
+icon_uuid: null
+description: null
 behavior_plugins: {  }
