--- a/config/sync/paragraphs.paragraphs_type.vih_ordered_option.yml
+++ b/config/sync/paragraphs.paragraphs_type.vih_ordered_option.yml
@@ -4,4 +4,6 @@ status: true
 dependencies: {  }
 id: vih_ordered_option
 label: 'Ordered Option'
+icon_uuid: null
+description: null
 behavior_plugins: {  }
