--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.node.event.body
     - field.field.node.event.field_banner
     - field.field.node.event.field_event_end_date
@@ -129,7 +129,7 @@ content:
     type: entity_browser_file
     weight: 2
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser
       field_widget_remove: true
       open: true
       selection_mode: selection_append
@@ -161,13 +161,13 @@ content:
     type: entity_browser_file
     weight: 7
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
+      entity_browser: media_browser
       field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
       open: true
       selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
     third_party_settings: {  }
     region: content
   field_metatag:
