--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -84,6 +84,7 @@ hidden:
   field_banner: true
   field_paragraphs: true
   field_user_birthday: true
+  field_user_kvalifikationer: true
   field_user_type_id: true
   field_vih_user_descr: true
   field_vih_user_title: true
