--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -229,10 +229,17 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   translation:
     weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_user_kvalifikationer: true
   timezone: true
