--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   contact: 0
   contact_block: 0
   contact_storage: 0
+  content_moderation: 0
   context: 0
   context_ui: 0
   contextual: 0
@@ -107,6 +108,7 @@ module:
   webform: 0
   webform_ui: 0
   workbench_moderation: 0
+  workflows: 0
   menu_link_content: 1
   pathauto: 1
   webform_bootstrap: 1
