--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -3,16 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.1_column_action_centered.field_background_color
     - field.field.paragraph.1_column_action_centered.field_background_image
     - field.field.paragraph.1_column_action_centered.field_description
     - field.field.paragraph.1_column_action_centered.field_heading
     - field.field.paragraph.1_column_action_centered.field_link
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
+    - entity_browser
     - field_group
-    - image
     - link
     - text
     - workbench_moderation
@@ -20,8 +20,8 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_color
         - field_background_image
+        - field_background_color
       parent_name: ''
       weight: 4
       format_type: tab
@@ -39,17 +39,22 @@ bundle: 1_column_action_centered
 mode: default
 content:
   field_background_color:
-    weight: 3
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_background_image:
-    type: image_image
+    type: entity_browser_file
     weight: 4
     settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
-      progress_indicator: throbber
+      field_widget_edit: true
+      open: false
+      view_mode: default
     third_party_settings: {  }
     region: content
   field_description:
