--- a/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
@@ -3,17 +3,35 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.class_packages.field_background_color
     - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_class_id
     - field.field.paragraph.class_packages.field_heading
     - field.field.paragraph.class_packages.field_link
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.class_packages
   module:
-    - image
+    - entity_browser
+    - field_group
     - link
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_appearance:
+      children:
+        - field_background_image
+        - field_background_color
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Udseende
+      region: content
 id: paragraph.class_packages.default
 targetEntityType: paragraph
 bundle: class_packages
@@ -28,10 +46,15 @@ content:
   field_background_image:
     weight: 1
     settings:
-      progress_indicator: throbber
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
+      field_widget_edit: true
+      open: false
+      view_mode: default
     third_party_settings: {  }
-    type: image_image
+    type: entity_browser_file
     region: content
   field_class_id:
     weight: 3
