--- a/config/sync/core.entity_form_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.employee.default.yml
@@ -3,16 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.employee.field_background_color
     - field.field.paragraph.employee.field_background_image
     - field.field.paragraph.employee.field_heading
     - field.field.paragraph.employee.field_link
     - field.field.paragraph.employee.field_user_type_id
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.employee
   module:
+    - entity_browser
     - field_group
-    - image
     - link
     - workbench_moderation
 third_party_settings:
@@ -46,10 +46,15 @@ content:
   field_background_image:
     weight: 3
     settings:
-      progress_indicator: throbber
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
+      field_widget_edit: true
+      open: false
+      view_mode: default
     third_party_settings: {  }
-    type: image_image
+    type: entity_browser_file
     region: content
   field_heading:
     weight: 0
