--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -3,18 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.gallery.field_background_color
     - field.field.paragraph.gallery.field_background_image
     - field.field.paragraph.gallery.field_heading
     - field.field.paragraph.gallery.field_images
     - field.field.paragraph.gallery.field_link
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.gallery
   module:
+    - entity_browser
     - field_group
-    - image
-    - image_widget_crop
-    - lightning_media
     - link
     - workbench_moderation
 third_party_settings:
@@ -46,11 +44,16 @@ content:
     type: options_select
     region: content
   field_background_image:
-    type: image_image
+    type: entity_browser_file
     weight: 1
     settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
-      progress_indicator: throbber
+      field_widget_edit: true
+      open: false
+      view_mode: default
     region: content
     third_party_settings: {  }
   field_heading:
@@ -62,22 +65,18 @@ content:
     type: string_textfield
     region: content
   field_images:
-    type: image_widget_crop
+    type: entity_browser_file
     weight: 1
     settings:
-      show_crop_area: true
-      show_default_crop: true
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
-      crop_preview_image_style: crop_thumbnail
-      progress_indicator: throbber
-      crop_list:
-        - gallery_enlarged
-      warn_multiple_usages: false
+      field_widget_edit: true
+      open: false
+      view_mode: default
     region: content
-    third_party_settings:
-      lightning_media:
-        file_links: true
-        remove_button: true
+    third_party_settings: {  }
   field_link:
     weight: 2
     settings:
