--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -11,13 +11,10 @@ dependencies:
     - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
     - field_group
-    - image_widget_crop
-    - lightning_media
     - link
     - text
     - workbench_moderation
@@ -87,22 +84,18 @@ content:
     type: link_default
     region: content
   field_paragraph_person_photo:
-    type: image_widget_crop
+    type: entity_browser_file
     weight: 3
     settings:
-      show_default_crop: true
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
-      crop_preview_image_style: crop_square
-      progress_indicator: throbber
-      crop_list:
-        - square
-      show_crop_area: false
-      warn_multiple_usages: false
+      field_widget_edit: true
+      open: false
+      view_mode: default
     region: content
-    third_party_settings:
-      lightning_media:
-        file_links: true
-        remove_button: true
+    third_party_settings: {  }
   field_paragraph_text:
     type: text_textarea
     weight: 2
