--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -14,12 +14,10 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
-    - image.style.thumbnail
     - taxonomy.vocabulary.vih_class
   module:
     - entity_browser
     - field_group
-    - image_widget_crop
     - metatag
     - paragraphs
     - path
@@ -108,16 +106,16 @@ content:
     third_party_settings: {  }
     region: content
   field_banner:
-    type: image_widget_crop
+    type: entity_browser_file
     weight: 14
     settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
-      progress_indicator: throbber
-      crop_preview_image_style: crop_thumbnail
-      crop_list: {  }
-      show_crop_area: false
-      show_default_crop: true
-      warn_multiple_usages: false
+      field_widget_edit: true
+      open: false
+      view_mode: default
     region: content
     third_party_settings: {  }
   field_heading:
@@ -176,12 +174,12 @@ content:
     weight: 4
     settings:
       entity_browser: image_browser
-      field_widget_edit: true
       field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
       open: true
       selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
     third_party_settings: {  }
     region: content
   field_vih_class_material_price:
