VI-195 birthdate field added to Ordered Course Person

--- a/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_birthdate
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_cpr
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_email
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_first_name
@@ -10,6 +11,7 @@ dependencies:
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_ordered_options
     - paragraphs.paragraphs_type.vih_ordered_course_person
   module:
+    - datetime
     - paragraphs
     - workbench_moderation
 id: paragraph.vih_ordered_course_person.default
@@ -17,6 +19,12 @@ targetEntityType: paragraph
 bundle: vih_ordered_course_person
 mode: default
 content:
+  field_vih_ocp_birthdate:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_vih_ocp_cpr:
     weight: 2
     settings:
@@ -51,7 +59,7 @@ content:
     region: content
   field_vih_ocp_ordered_options:
     type: paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
