--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "drupal/field_group": "3.x-dev",
         "drupal/photoswipe": "1.0-beta3",
         "drupal/ckeditor_media_embed": "^1.1",
-        "drupal/context": "4.0-beta2"
+        "drupal/context": "4.0-beta2",
+        "drupal/lightning_media_facebook": "^1.0"
     },
     "repositories": [
         {
