--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -89,6 +89,8 @@ module:
   search: 0
   search_api: 0
   search_api_db: 0
+  serialization: 0
+  simple_oauth: 0
   stage_file_proxy: 0
   system: 0
   taxonomy: 0
