--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -41,10 +41,10 @@ display:
         options:
           items_per_page: 50
           tags:
-            previous: '‹ Forrige'
-            next: 'Næste ›'
-            first: '« Første'
-            last: 'Sidste »'
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
       style:
         type: table
         options:
@@ -247,7 +247,7 @@ display:
           table: users_field_data
           field: name
           relationship: uid
-          label: Forfatter
+          label: Author
           exclude: false
           alter:
             alter_text: false
@@ -265,7 +265,7 @@ display:
           id: changed
           table: node_field_data
           field: changed
-          label: Opdateret
+          label: Updated
           exclude: false
           alter:
             alter_text: false
@@ -340,7 +340,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Udgivet
+          label: Status
           exclude: false
           alter:
             alter_text: false
@@ -385,8 +385,8 @@ display:
           type: boolean
           settings:
             format: yes-no
-            format_custom_true: Udgivet
-            format_custom_false: 'Ikke udgivet'
+            format_custom_true: Published
+            format_custom_false: Unpublished
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -531,7 +531,7 @@ display:
           table: views
           field: area_text_custom
           empty: true
-          content: 'Der er intet indhold at vise.'
+          content: 'No content available.'
           plugin_id: text_custom
       arguments: {  }
       relationships:
