--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,7 @@
         "drupal/coffee": "1.x-dev",
         "drupal/field_group": "3.x-dev",
         "drupal/photoswipe": "1.0-beta3",
-        "drupal/ckeditor_media_embed": "^1.1",
-        "drupal/context": "4.0-beta2",
-        "drupal/media_entity_facebook": "2.0-alpha1"
+        "drupal/context": "4.0-beta2"
     },
     "repositories": [
         {
