--- a/config/sync/field.storage.paragraph.field_embed.yml
+++ b/config/sync/field.storage.paragraph.field_embed.yml
@@ -1,16 +1,16 @@
-uuid: 1a983b15-7461-4e8a-a39d-3020839bbf32
+uuid: d8a196de-7aff-4c60-b948-f33b0dae14df
 langcode: da
 status: true
 dependencies:
   module:
+    - link
     - paragraphs
-id: paragraph.field_instagram_embed
-field_name: field_instagram_embed
+id: paragraph.field_embed
+field_name: field_embed
 entity_type: paragraph
-type: string_long
-settings:
-  case_sensitive: false
-module: core
+type: link
+settings: {  }
+module: link
 locked: false
 cardinality: 1
 translatable: true
